# customervault

./: .gitattributes  .gitignore  CNAME  README.md  asset-manifest.json  heroku.yml  index.html  precache-manifest.152629040241897cd5d496d57ed3ca80.js  precache-manifest.513ae785725cdf962516d9b4be19ff67.js  precache-manifest.65354c4cf81cebb5dfa1de99027b6e59.js  precache-manifest.98153b15f27baea1ec0b0729de2c55cb.js  precache-manifest.bf577abc388d7ae71bb28d72e091e30f.js  precache-manifest.df016f6986e6ac56197df3acdaa3af7c.js  precache-manifest.fb6d511de19f0669ee2bd65e77593507.js  service-worker.js
.github/workflows/: ci_front.yml  deploy.yml  main.yml
api/: .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  _Dockerfile  api.code-workspace  pyproject.toml  setup.cfg
api/app/: main.py
api/app/core/: config.py
api/app/tests/: conftest.py
api/docker/: Dockerfile  gunicorn_conf.py
api/src/: main.py  pyproject.toml
api/tests/: conftest.py  main.py  test_generate.py
backend/: .pre-commit-config.yaml  README.md  pyproject.toml
backend/src/: database.py
backend/tests/: conftest.py
front/: .gitignore  front.code-workspace  package-lock.json  package.json
front/public/: index.html
front/src/: App.test.tsx  App.tsx
static/js/: 2.0fcba7e6.chunk.js  2.0fcba7e6.chunk.js.map  main.0296a3d4.chunk.js  main.0296a3d4.chunk.js.map  main.18727413.chunk.js  main.18727413.chunk.js.map  main.aa1e6c13.chunk.js  main.aa1e6c13.chunk.js.map  main.b3dbecb9.chunk.js  main.b3dbecb9.chunk.js.map  main.dc3820ad.chunk.js  main.dc3820ad.chunk.js.map  runtime~main.8c247aa5.js  (+1 more)
(+1 files in other folders)
