[tool.poetry]
name = "customervault"
version = "0.1.0"
description = ""

authors = ["Jon Whittlestone <dev@howapped.com>"]

packages = [
    { include="src", from="."}
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.67.0"
uvicorn = "^0.17.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
httpx = "^0.21.3"
asgi-lifespan = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.10.1"
autoflake = "^1.4"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.0"
pre-commit = "^2.8.2"
black = "^21.10b0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'src.main:start'
test = 'tests.main:start'
